--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "bootstrap-wip",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Todd Eidson <todd@eidson.info>",
-  "license": "ISC"
+  "license": "MIT"
 }
