--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bootstrap-wip",
+  "name": "bootstrap-wireframes",
   "version": "0.0.2",
   "description": "",
   "main": "gulpfile.js",
